fix: amended media queries to avoid overlapping of text on index pg

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -112,6 +112,7 @@ nav ul {
 
 .welcome {
     font-size: 2rem !important;
+    margin-top: 80px;
 }
 
 .new-zealand {
@@ -152,6 +153,10 @@ nav ul {
     font-family: 'Raleway', sans-serif;
     font-size: 1.8rem;
     margin: 0 auto;
+}
+
+.guide-btn {
+    bottom: 8rem;
 }
 
 .icon-flipped {
@@ -205,7 +210,7 @@ nav ul {
 }
 
 /* Media Queries */
-@media screen and (max-width: 575px) {
+@media screen and (max-width: 700px) {
     nav .brand-logo {
         font-size: 1.4rem;
         margin-left: 0px;
@@ -229,29 +234,27 @@ nav ul {
     .about-kiwi h2 {
         font-size: 2rem;
     }
-
-
-    @media screen and (max-width: 375px) {
-
-        .join-text {
-            font-size: 1rem;
-        }
-
-        .guide-btn {
-            margin-left: auto;
-            margin-right: auto;
-
-        }
-    }
-
-    @media screen and (max-width: 700px) and (min-width: 400px) {
-
-        .join-text {
-            font-size: 1.4rem;
-        }
-    }
-
 }
+
+@media screen and (max-width: 375px) {
+
+    .join-text {
+        font-size: 1rem;
+    }
+
+    .guide-btn {
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    .join-text {
+        font-size: 1.2rem;
+    }
+}
+
+
 
 
 /* Like and Dislike Buttons*/
@@ -327,9 +330,9 @@ form .card {
 }
 
 .carousel-item {
-    width: 100%;
+    max-width: 100%;
     height: 70vh;
-    background-repeat: no-repeat, repeat;
+    background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     position: relative;
